--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,7 @@
                 <groupId>org.jetbrains.kotlin</groupId>
                 <version>${kotlin.version}</version>
                 <configuration>
+                    <jvmTarget>1.8</jvmTarget>
                     <args>
                         <arg>-Xskip-runtime-version-check</arg>
                     </args>
